# intoduction-to-evolutionary-computing

GeneticAlgorithmTorch/: ntbk.ipynb  pyproject.toml
findFunction/: pyproject.toml
findXSquaredMax/: main.py  ntbk.ipynb  pyproject.toml
minCoverage/: ntbk.ipynb  pyproject.toml
