[tool.poetry]
name = "findfunction"
version = "0.1.0"
description = ""
authors = ["DIMITRI MASETTA <S306130@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.25.2"
pywinpty = "^2.0.11"
jupyter = "^1.0.0"
numpy = {version = "^1.26.0", python="^3.9,<3.13"}
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
