[tool.poetry]
name = "mincoverage"
version = "0.1.0"
description = ""
authors = ["DIMITRI MASETTA <S306130@studenti.polito.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = {version = "^1.26.0", python="^3.9,<3.13"}
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu121/torchaudio-2.1.0%2Bcu121-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.16.0%2Bcu121-cp311-cp311-win_amd64.whl"}
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
